# Planetary-Stacker

./: .gitignore  GETTING_STARTED.md  IMPLEMENTATION_STATUS.md  README.md
docs/: DESIGN_SPECIFICATION.md  NEXT_STEPS.md
planetary_stacker/: PROJECT_STATUS.md  README.md  pubspec.yaml
planetary_stacker/android/: CMakeLists.txt  build.gradle
planetary_stacker/android/src/main/: AndroidManifest.xml
planetary_stacker/android/src/main/java/com/planetary/planetary_stacker/: PlanetaryStackerPlugin.java
planetary_stacker/example/: README.md  pubspec.yaml
planetary_stacker/example/android/app/: build.gradle.kts
planetary_stacker/example/android/app/src/main/: AndroidManifest.xml
planetary_stacker/example/android/app/src/main/kotlin/com/planetary/planetary_stacker_example/: MainActivity.kt
planetary_stacker/example/lib/: main.dart
planetary_stacker/example/test/: widget_test.dart
planetary_stacker/lib/: planetary_stacker.dart
planetary_stacker/lib/src/: frame_analysis.dart  processing_params.dart  stacker.dart
planetary_stacker/lib/src/alignment/: phase_correlator.dart
planetary_stacker/lib/src/quality/: quality_assessor.dart
planetary_stacker/lib/src/sharpening/: wavelet_sharpener.dart
planetary_stacker/lib/src/stacking/: sigma_clip_stacker.dart
planetary_stacker/lib/src/video/: frame_extractor.dart
planetary_stacker/src/: planetary_stacker.cpp  planetary_stacker.h
